@@ -1,4 +1,4 @@
-package com.switchwon.paymentimpl.shop.out.entity;
+package com.switchwon.paymentimpl.shop.out.jpa.entity;
 
 import com.switchwon.shop.domain.Shop;
 import com.switchwon.shop.domain.ShopSellHistory;
@@ -6,12 +6,17 @@ import jakarta.persistence.CascadeType;
 import jakarta.persistence.Entity;
 import jakarta.persistence.Id;
 import jakarta.persistence.OneToMany;
+import lombok.Builder;
+import lombok.NoArgsConstructor;
+import lombok.experimental.SuperBuilder;
 
 import java.math.BigDecimal;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Entity
+@NoArgsConstructor
 public class ShopEntity extends Shop {
 
     @Id
@@ -25,12 +30,12 @@ public class ShopEntity extends Shop {
         return super.getFeePercent();
     }
 
-    @OneToMany(mappedBy = "shop", cascade = CascadeType.ALL, orphanRemoval = true)
+    @OneToMany(mappedBy = "shop", cascade = CascadeType.ALL)
     @Override
     public List<ShopSellHistoryEntity> getSellHistoryList() {
         return super.getSellHistoryList().stream()
                 .map(shopSellHistory -> (ShopSellHistoryEntity)shopSellHistory)
-                .toList();
+                .collect(Collectors.toList());
     }
 
 }
